# simplegit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: clean-rebuild.js  update-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_commands.rs  github_auth.rs  main.rs
src/components/features/diff/: DiffViewer.tsx
src/components/features/operations/: GitOperationsPanel.tsx  types.ts
src/components/features/operations/sections/: AdvancedOperations.tsx  BasicOperations.tsx  BranchOperations.tsx  CommitOperations.tsx
src/components/features/repository/: dashboard.tsx
src/components/features/settings/: SettingsDialog.tsx
src/components/ui/: alert.tsx  animated-arrow.tsx  button.tsx  context-menu.tsx  feedback-toast.tsx  input.tsx  loading-spinner.tsx  scroll-area.tsx  select.tsx  tooltip.tsx
src/styles/: globals.css
src/types/: repository.ts  repositoryStats.ts
